[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menus/PixelFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/MainMenu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 560.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 1 )
text = "Start Game"
flat = true
align = 0

[node name="MultiplayerButton" type="Button" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 560.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 1 )
text = "Multiplayer"
flat = true
align = 0

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 560.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"
flat = true
align = 0

[node name="ExitButton" type="Button" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 560.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"
flat = true
align = 0

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 560.0
margin_bottom = 277.0
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 281.0
margin_right = 560.0
margin_bottom = 285.0

[node name="VersionLabel" type="Label" parent="VBoxContainer"]
margin_top = 289.0
margin_right = 560.0
margin_bottom = 320.0
size_flags_vertical = 5
text = "Version 0.0.1
Clerium"
[connection signal="focus_entered" from="VBoxContainer/StartButton" to="." method="_on_StartButton_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_StartButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/MultiplayerButton" to="." method="_on_MultiplayerButton_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/MultiplayerButton" to="." method="_on_MultiplayerButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="focus_entered" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_focus_entered"]
[connection signal="mouse_entered" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
